# linalg

./: .gitignore  CMakeLists.txt  Config.cmake.in  build.sh  dependencies_ubuntu.txt
.github/workflows/: github-actions.yml
docs/: .gitignore  doxyfile
docs/html/: DynamicEigenMatrix_8hpp.html  DynamicEigenMatrix_8hpp.js  DynamicEigenMatrix_8hpp__dep__incl.map  DynamicEigenMatrix_8hpp__dep__incl.md5  DynamicEigenMatrix_8hpp__incl.map  DynamicEigenMatrix_8hpp__incl.md5  EigenArray_8hpp.html  EigenArray_8hpp.js  EigenArray_8hpp__dep__incl.map  EigenArray_8hpp__dep__incl.md5  EigenArray_8hpp__incl.map  EigenArray_8hpp__incl.md5  EigenMatrix_8hpp.html  EigenMatrix_8hpp.js  EigenMatrix_8hpp__dep__incl.map  EigenMatrix_8hpp__dep__incl.md5  EigenMatrix_8hpp__incl.map  EigenMatrix_8hpp__incl.md5  Quaternion_8hpp.html  Quaternion_8hpp.js  Quaternion_8hpp__incl.map  Quaternion_8hpp__incl.md5  SparseEigenMatrix_8hpp.html  SparseEigenMatrix_8hpp.js  SparseEigenMatrix_8hpp__incl.map  SparseEigenMatrix_8hpp__incl.md5  StaticEigenMatrix_8hpp.html  StaticEigenMatrix_8hpp.js  StaticEigenMatrix_8hpp__dep__incl.map  StaticEigenMatrix_8hpp__dep__incl.md5  StaticEigenMatrix_8hpp__incl.map  StaticEigenMatrix_8hpp__incl.md5  annotated.html  annotated_dup.js  array__adaptors_8hpp.html  array__adaptors_8hpp.js  array__adaptors_8hpp__incl.map  array__adaptors_8hpp__incl.md5  arraytypes_8hpp.html  arraytypes_8hpp.js  (+156 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+117 more)
test/: linalg_testrunner.cpp
